# app/Http/Requests/ParkingCalculateRequest.php
@@ -2,9 +2,7 @@
 
 namespace App\Http\Requests;
 
-use Illuminate\Foundation\Http\FormRequest;
-
-class ParkingRequest extends FormRequest
+class ParkingCalculateRequest extends ParkingRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -21,11 +19,10 @@ class ParkingRequest extends FormRequest
      */
     public function rules(): array
     {
-        return [
-            'duration' => ['required', 'integer', 'min:60'],
-            'is_auto_renewal' => ['required', 'boolean'],
-            'vehicle_id' => ['required', 'integer', 'exists:vehicles,id'],
-            'zone_id' => ['required', 'integer', 'exists:zones,id'],
-        ];
+        $rules = parent::rules();
+
+        unset($rules['is_auto_renewal']);
+
+        return $rules;
     }
 }
